# llm-from-scratch

./: README.md  attention.py  data_loader.py  exploring_attention.py  exploring_gpt.py  main.py  pyproject.toml  tokenizer.py  tokenizer_regex.py
data/: test_inouts.py
